Issue #26924: Fix Windows buildbots

sem_unlink is defined as

    #define SEM_UNLINK(name) 0

under Windows.